--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 
 <html>
 <head>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128562040-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128562040-1');
+</script>
+
+
 <title>New Zealand Running Stats</title>
-<!--<link rel="icon" href="../src/Images/transcribe.png">-->
+
 <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="src/styles.css">
