--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </script>
 
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6655308001944194",
+    enable_page_level_ads: true
+  });
+</script>
+
+
 <title>New Zealand Running Stats</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
