Histogram svg mobile scaling

--- a/half-marathon/index.html
+++ b/half-marathon/index.html
@@ -46,7 +46,7 @@
 
 
 <title>Half-marathon stats</title>
-<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=0.1, maximum-scale=1.0, user-scalable=yes, target-densitydpi=device-dpi" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="New Zealand half-marathon statistical summaries." />
 <link rel="stylesheet" type="text/css" href="../src/styles.css">
@@ -114,6 +114,7 @@ function init(){
 		$('head').find("link").remove();
 		$('head').append('<link rel="stylesheet" type="text/css" href="../src/' + stylesheet + '.css">');
 	}
+	
 
 
 	halfMarathonCourseANOVA = null;
@@ -653,8 +654,7 @@ function loadCSV(url, resolve = function(result) { }){
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
 
-	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+
 
 
 
