--- a/marathon/index.html
+++ b/marathon/index.html
@@ -46,7 +46,7 @@
 
 
 <title>Marathon stats</title>
-<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=0.1, maximum-scale=1.0, user-scalable=yes, target-densitydpi=device-dpi" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="New Zealand marathon statistical summaries." />
 <link rel="stylesheet" type="text/css" href="../src/styles.css">
@@ -655,8 +655,7 @@ function loadCSV(url, resolve = function(result) { }){
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
 
-	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
+
 
 
 
