--- a/half-marathon/index.html
+++ b/half-marathon/index.html
@@ -624,7 +624,7 @@ function loadCSV(url, resolve = function(result) { }){
 					</svg>
 										
 					<div class="caption-div">
-						<b>Histogram of half-marathon completion times.</b> Unlike the previous plot, this plot displays raw data. All participants are included here regardless of how many half-marathons they
+						<b>Distribution of half-marathon completion times.</b> Unlike the previous plot, this plot displays raw data. All participants are included here regardless of how many half-marathons they
 							have run or how long they took to complete it.
 					</div>
 
