--- a/marathon/index.html
+++ b/marathon/index.html
@@ -625,7 +625,7 @@ function loadCSV(url, resolve = function(result) { }){
 					</svg>
 										
 					<div class="caption-div">
-						<b>Histogram of marathon completion times.</b> Unlike the previous plot, this plot displays raw data. All participants are included here regardless of how many marathons they
+						<b>Distribution of marathon completion times.</b> Unlike the previous plot, this plot displays raw data. All participants are included here regardless of how many marathons they
 							have run or how long they took to complete it.
 					</div>
 
