--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ function init(){
 
 	queryPaceCalulator(true);
 	
-	//console.log("width",  $(document).width(), screen.width, screen.height);
+	console.log("width",  $(document).width(), screen.width, screen.height);
 
             
 
