--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <title>NZ running stats</title>
 <link rel="icon" href="src/Images/logo.svg">
-<meta name="viewport" content="width=device-width, initial-scale=0.1, maximum-scale=1.0, user-scalable=yes, target-densitydpi=device-dpi" />
+<meta name="viewport" content="width=device-width, initial-scale=0.1, maximum-scale=1.0, user-scalable=yes" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="New Zealand marathon and half-marathon statistical summaries." />
 <link rel="stylesheet" type="text/css" href="src/styles.css">
