--- a/marathon/index.html
+++ b/marathon/index.html
@@ -574,7 +574,7 @@ function loadCSV(url, resolve = function(result) { }){
 					<div class="caption-div">
 						<b>Effect of course on marathon completion time.</b> Slower courses have have a greater time estimates of $\beta_\text{course}$. To control for the difference
 						between walkers and runners, participants who took more than 5 hours were discarded
-						from the dataset when building this model. Hover over the bars or error bars for more information. 
+						from the dataset when building this model. Hover over the bars or standard error bars for more information. 
 						
 						
 						<div class="query"> 
