--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ function queryPaceCalulator(from_speed = true){
 							
 					<div class="caption-div">
 						
-						Pace is measured in min/km and describes how many minutes it will take to walk/run 1 kilometer. Use the calculator below to convert between pace and speed.
+						Pace is measured in min/km and describes how many minutes it will take to travel 1 kilometer. Use the calculator below to convert between pace and speed.
 
 
 						<div class="query"> 
