--- a/contact/index.html
+++ b/contact/index.html
@@ -38,7 +38,7 @@
 
 <title>Contact us</title>
 <!--<link rel="icon" href="../src/Images/transcribe.png">-->
-<meta name="viewport" content="width=device-width, initial-scale=0.1, maximum-scale=1.0, user-scalable=yes" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="../src/styles.css">
 <link rel="stylesheet" type="text/css" media="screen and (max-device-width: 1200px)" href="../src/mobilestyles.css" />
@@ -126,7 +126,7 @@ function init(){
 				<div id="header" class="header" style="width:100%;">
 					<div class="maintitle"> NZ Running Stats</div>
 					<div class="subtitle"> A statistical summary of marathons from across New Zealand  </div>
-				</div>
+				
 				</div>
 		
 				<div class="tabs-bg">
@@ -157,19 +157,18 @@ function init(){
 				</div>
 
 
- 
 
-	
+
 	
 	
 	
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
 
+
+
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
 	<br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> 
-
-
 
 	
 	
