--- a/contact/index.html
+++ b/contact/index.html
@@ -125,6 +125,7 @@ function init(){
 						<a href="../"> <span class="tab">Home</span></a>
 						<a href="../marathon/"> <span class="tab">Marathon stats</span></a>
 						<a href="../half-marathon/"> <span class="tab">Half-marathon stats</span></a>
+						<a href="../10km/"> <span class="tab">10km race stats</span></a>
 						<span class="tab selected">Contact us</span>
 					</div>
 				</div>
