--- a/marathon/index.html
+++ b/marathon/index.html
@@ -125,6 +125,10 @@ function init(){
 			halfMarathonCourseANOVA.n[i] = parseFloat(halfMarathonCourseANOVA.n[i]);
 			
 
+			if (halfMarathonCourseANOVA.event[i][0] == "*") halfMarathonCourseANOVA.event[i] = halfMarathonCourseANOVA.event[i].substr(1);
+
+
+
 			// Capital on events
 			var event_split = halfMarathonCourseANOVA.event[i].split("-");
 			halfMarathonCourseANOVA.event[i] = "";
@@ -323,6 +327,11 @@ function init(){
 			var max_n_participants = 0;
 			for (var i = 0; i < marathonresults.nrows;i ++){
 			
+
+
+				if (marathonresults.course[i][0] == "*") marathonresults.course[i] = marathonresults.course[i].substr(1);
+
+
 				// Capital on events
 				var event_split = marathonresults.course[i].split("-");
 				marathonresults.course[i] = "";
@@ -511,6 +520,7 @@ function loadCSV(url, resolve = function(result) { }){
 						<a href="../"> <span class="tab">Home</span></a>
 						<span class="tab selected">Marathon stats</span>
 						<a href="../half-marathon/"> <span class="tab">Half-marathon stats</span></a>
+						<a href="../10km/"> <span class="tab">10km race stats</span></a>
 						<a href="../contact/"> <span class="tab">Contact us</span></a>
 					</div>
 
