Removed the word "stats" from the tabs

--- a/10km/index.html
+++ b/10km/index.html
@@ -516,9 +516,9 @@ function loadCSV(url, resolve = function(result) { }){
 					
 					<div style="text-align:center; margin-right:0px;">
 						<a href="../"> <span class="tab">Home</span></a>
-						<a href="../marathon/"> <span class="tab">Marathon stats</span></a>
-						<a href="../half-marathon/"> <span class="tab">Half-marathon stats</span></a>
-						<span class="tab selected">10km race stats</span>
+						<a href="../marathon/"> <span class="tab">Marathon</span></a>
+						<a href="../half-marathon/"> <span class="tab">Half-marathon</span></a>
+						<span class="tab selected">10km</span>
 						<a href="../contact/"> <span class="tab">Contact us</span></a>
 					</div>
 				</div>
