--- a/contact/index.html
+++ b/contact/index.html
@@ -123,9 +123,9 @@ function init(){
 					
 					<div style="text-align:center; margin-right:0px;">
 						<a href="../"> <span class="tab">Home</span></a>
-						<a href="../marathon/"> <span class="tab">Marathon stats</span></a>
-						<a href="../half-marathon/"> <span class="tab">Half-marathon stats</span></a>
-						<a href="../10km/"> <span class="tab">10km race stats</span></a>
+						<a href="../marathon/"> <span class="tab">Marathon</span></a>
+						<a href="../half-marathon/"> <span class="tab">Half-marathon</span></a>
+						<a href="../10km/"> <span class="tab">10km</span></a>
 						<span class="tab selected">Contact us</span>
 					</div>
 				</div>
