--- a/half-marathon/index.html
+++ b/half-marathon/index.html
@@ -518,9 +518,9 @@ function loadCSV(url, resolve = function(result) { }){
 					
 					<div style="text-align:center; margin-right:0px;">
 						<a href="../"> <span class="tab">Home</span></a>
-						<a href="../marathon/"> <span class="tab">Marathon stats</span></a>
-						<span class="tab selected">Half-marathon stats</span>
-						<a href="../10km/"> <span class="tab">10km race stats</span></a>
+						<a href="../marathon/"> <span class="tab">Marathon</span></a>
+						<span class="tab selected">Half-marathon</span>
+						<a href="../10km/"> <span class="tab">10km</span></a>
 						<a href="../contact/"> <span class="tab">Contact us</span></a>
 					</div>
 				</div>
