--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ function queryPaceCalulator(from_speed = true){
 							<b>Version 1.2 (2018-12-02)</b>
 							<ul> 
 							    <li> All marathons now ranked using last 5 years where available (added 2014 Mountain to Surf Marathons (now ranked fastest), and added 2014-2015 Buller marathon)
-								<li> Added 2014-2018 Feiling Marathon (New Zealand's longest running marathon)
+								<li> Added 2014-2018 Feilding Marathon (New Zealand's longest running marathon)
 								<li> Added 2016-2018 Mountain to Surf half marathons
 								<li> Added 2016-2018 Cambridge half marathons
 								<li> Added 2018 Tauranga City to Surf half marathon
