half-marathon -> half marathon

--- a/marathon/index.html
+++ b/marathon/index.html
@@ -519,7 +519,7 @@ function loadCSV(url, resolve = function(result) { }){
 					<div style="text-align:center; margin-right:0px;">
 						<a href="../"> <span class="tab">Home</span></a>
 						<span class="tab selected">Marathon</span>
-						<a href="../half-marathon/"> <span class="tab">Half-marathon</span></a>
+						<a href="../half-marathon/"> <span class="tab">Half marathon</span></a>
 						<a href="../10km/"> <span class="tab">10km</span></a>
 						<a href="../contact/"> <span class="tab">Contact us</span></a>
 					</div>
