bug fix rolled into version 1.3

--- a/index.html
+++ b/index.html
@@ -392,6 +392,14 @@ function queryPaceCalulator(from_speed = true){
 							    <li> Added 2015 New Plymouth 10km in place of 2016 New Plymouth 10km which is missing division data.
 							    <li> Added 2017 Southern lakes 10km race.
 							    <li> Added 2016-2018 Albany Lakes 10km series races (3 races per year = 9 races)
+							    <li> Fixed bug which caused times faster than 1hr to be ignored in following 10 races
+								<ul>
+									<li> 2015-2018 manawatu-striders 10km
+									<li> 2015-2017 new-plymouths 10km
+									<li> 2016 huntly and taupo 10km races
+									<li> 2017 southern-lakes 10km race
+								    </ul>
+
  							</ul>
 						</div>
 
