--- a/index.html
+++ b/index.html
@@ -393,14 +393,17 @@ function queryPaceCalulator(from_speed = true){
 							    <li> Added 2017 Southern lakes 10km race.
 							    <li> Added 2016-2018 Albany Lakes 10km series races (3 races per year = 9 races)
 							    <li> Fixed bug which caused times faster than 1hr to be ignored in following 10 races
-								<ul>
-									<li> 2015-2018 manawatu-striders 10km
-									<li> 2015-2017 new-plymouths 10km
-									<li> 2016 huntly and taupo 10km races
-									<li> 2017 southern-lakes 10km race
-								    </ul>
+							
+							</ul>
+							
+							<b><a href="https://github.com/nzrunningstats/nzrunningstats.github.io/releases/tag/v1.4">Version 1.4</a> (2018-12-09)</b>
 
- 							</ul>
+							<ul>
+								<li> 2015-2018 manawatu-striders 10km
+								<li> 2015-2017 new-plymouths 10km
+								<li> 2016 huntly and taupo 10km races
+								<li> 2017 southern-lakes 10km race
+							</ul>
 						</div>
 
 
