--- a/contact/index.html
+++ b/contact/index.html
@@ -128,7 +128,7 @@ function init(){
 					
 							
 					<div style="text-align:center; margin:auto; line-height: 1.3em">
-						To report a bug or leave a comment please contact nzrunningstats@gmail.com <br><br>	
+						To report a bug or leave a comment please contact alexei.drummond@gmail.com <br><br>	
 					</div>
 
 
